<resources>
    <string name="app_name">ប្រព័ន្ធគ្រប់គ្រងមន្រ្តីរាជការ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">កំពង់ចាម</string>
    <string name="nav_header_subtitle">ប្រព័ន្ធគ្រប់គ្រងមន្រ្តីរាជការ</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_kh_home">ទំព័រដើម</string>
    <string name="profile">ព័ត៌មានផ្ទាល់ខ្លួន</string>
    <string name="label_officer_id">លេខសំគាល់ចំនួនមន្រ្តីរាជការ</string>
    <string name="label_employee_id">អត្តលេខមន្ដ្រីរាជការ</string>
    <string name="label_kh_education">កម្រិតវប្បធម៍</string>
    <string name="label_edu_1">-កម្រិតវប្បធម៌ទូទៅ (បំពេញយកតែចុងក្រោយ )</string>
    <string name="label_edu_2">-កម្រិតបណ្ដុះបណ្ដាលមុខវិជ្ជាជីវៈមូលដ្ឋាន និងក្រោយមូលដ្ឋាន</string>
    <string name="label_edu_3">-ចំណេះដឹងភាសាបរទេស</string>
    <string name="label_edu_4">-ការបណ្ដុះបណ្ដាល និងវគ្គសិក្សាកំពុងបន្ដ (ត្រូវបំពេញវគ្គសិក្សាដែលថ្មីៗសំខាន់ និងចាំបាច់)</string>
    <string name="label_kh_experience">ប្រវត្តិការងារ</string>
    <string name="label_kh_exp_1">ថ្ងៃចូលបំរើការងារក្នុងក្របខណ្ឌរដ្ឋ</string>
    <string name="label_kh_exp_2">ថ្ងៃចូលកាន់មុខតំណែងបច្ចុប្បន្ន </string>
    <string name="label_kh_exp_3">អង្គភាព</string>
    <string name="label_kh_exp_4">ប្រភេទក្របខ័ណ្ឌ</string>
    <string name="label_kh_exp_5">មុខតំណែងបច្ចុប្បន្ន</string>
    <string name="label_kh_exp_6">បទពិសោធន៍ការងារជាមួយក្រសួងមហាផ្ទៃ/រដ្ឋបាលថ្នាក់ក្រោមជាតិ</string>
    <string name="label_kh_exp_7">បទពិសោធន៍ការងារជាមួយវិស័យរដ្ឋផ្សេងៗ</string>
    <string name="label_kh_exp_8">បទពិសោធន៍ការងារជាមួយវិស័យឯកជន ឬអង្កការក្រៅរដ្ឋាភិបាលនានា</string>
    <string name="label_class_and_level">class and level</string>
    <string name="label_from_date_to_date">from date to date</string>
    <string name="label_organization">organization</string>
    <string name="label_penalty">ការដាក់ពិន័យ</string>
    <string name="label_motivation">ការលើងទឹកចិត្ត</string>
    <string name="label_couple">ព័ត៌មានប្ដីឬក៏ប្រពន្ធ</string>
    <string name="label_child">ព័ត៌មានកូន</string>
    <string name="label_parent">ព័ត៌មានរបស់ឪពុកម្ដាយ</string>
    <string name="label_reference">ព័ត៌មានរបស់អ្នកដឹងលឺ</string>
    <string name="label_family">ព័ត៌មានគ្រួសារ</string>
    <string name="label_name">ឈ្មោះ</string>
    <string name="label_date_of_birth">ថ្ងៃខែឆ្នាំកំណើត</string>
    <string name="label_job">មុខរបរ</string>
    <string name="label_sex">ភេទ</string>
    <string name="label_info_father">ព័ត៍មានឪពុក</string>
    <string name="label_info_mother">ព័ត៍មានម្តាយ</string>
    <string name="label_live_status">ស្ថានភាពរស់នៅ</string>
    <string name="label_place_of_birth">ទីកន្លែងកំណើត</string>
    <string name="label_ref_one">អ្នកដឹងឮទីមួយ</string>
    <string name="label_ref_two">អ្នកដឹងឮទីពីរ</string>
    <string name="label_phone">លេខទូរស័ព្ទ</string>
    <string name="label_permanent_address">អាស័យដ្ឋានអចិន្រ្ដៃយ៏បច្ចុប្បន្ន</string>
</resources>
